[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sample-game-logic"
version = "0.1.0"
description = "Sample Game Logic"
authors = [
  { name="Jenny Wadkins", email="threnjen@gmail.com" }
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
  "pydantic",  # add your deps here
]

[tool.setuptools.packages.find]
where = ["src"]